# interview_task2

./: main.py  pyproject.toml
shapes-package/: pyproject.toml
src/: Circle.py  ShapesInterface.py  Triangle.py
tests/: test_circle.py  test_triangle.py
